If an <object> is removed from the page while its fallback content is being used, Safari will automatically use fallback content when the object is re-inserted. https://bugs.webkit.org/show_bug.cgi?id=44827

Reviewed by Alexey Proskuryakov.

The bug was caused by HTMLObjectElement::parseAttribute not resetting m_useFallbackContent
when the object element is disconnected. This patch addresses it and adds a test.

* Source/WebCore/html/HTMLObjectElement.cpp:
(WebCore::HTMLObjectElement::parseAttribute):

* LayoutTests/fast/dom/HTMLObjectElement/object-element-fallback-content-update-expected.txt: Added.
* LayoutTests/fast/dom/HTMLObjectElement/object-element-fallback-content-update.html: Added.

Canonical link: https://commits.webkit.org/251903@main